--- a/static/html/index.html
+++ b/static/html/index.html
@@ -5,9 +5,93 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <script src="https://unpkg.com/vue@3.0.0/dist/vue.global.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 </head>
 <body>
-  <h1>Hello</h1>
+  <div class="container-lg">
+    <div class="mb-3">
+      <div>
+        <span style="font-size: 2em; font-weight: bold;">Amazon Translate</span>
+      </div>
+    </div>
+    <div id="app">
+      <div class="row">
+        <div class="col-sm">
+          <div class="mb-3">
+            <select v-model="srcLang" v-on:change="translate" class="form-select">
+              <option value="auto">自動</option>
+              <option v-for="(value, key, i) in lang" v-bind:value="value.code">{{value.name}}</option>
+            </select>
+          </div>
+          <div class="mb-3">
+            <textarea v-model="srcText" v-on:input="translate" class="form-control" rows="20" placeholder="テキストを入力してください"></textarea>
+          </div>
+          <!--
+          <button v-on:click.prevent="search">検索</button>
+          -->
+        </div>
+        <div class="col-sm">
+          <div class="mb-3">
+            <select v-model="dstLang" v-on:change="translate" class="form-select">
+              <option v-for="(value, key, i) in lang" v-bind:value="value.code">{{value.name}}</option>
+            </select>
+          </div>
+          <div class="mb-3">
+            <textarea v-model="dstText" class="form-control" rows="20"></textarea>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <script>
+    Vue.createApp({
+      data() {
+        return {
+          lang: {
+            "ja"   : {code: "ja"   , name: "日本語"},
+            "en"   : {code: "en"   , name: "英語"},
+            "fr"   : {code: "fr"   , name: "フランス語"},
+            "de"   : {code: "de"   , name: "ドイツ語"},
+            "ko"   : {code: "ko"   , name: "韓国語"},
+            "zh"   : {code: "zh"   , name: "簡体字中国語"},
+            "zh-TW": {code: "zh-TW", name: "繁体字中国語"}
+          },
+          srcLang: "auto",
+          dstLang: "ja",
+          srcText: "",
+          dstText: "",
+        }
+      },
+      methods: {
+        translate(e) {
+          let that = this;
+          let url = "/dev/translate"
+          //console.log(url)
+          console.log(this.srcText)
+          axios.post(url, {
+            text: this.srcText,
+            src_lang: this.srcLang,
+            dst_lang: this.dstLang,
+          })
+            .then(function (response) { // リクエスト成功時
+              console.log(response.data.result.text)
+              that.dstText = response.data.result.text
+            })
+            .catch(function (error) { // リクエスト失敗時の処理
+              console.log(error)
+            })
+            .then(function () { // リクエスト後に必ず実行される処理
+              console.log("finaly")
+            })
+        }
+      }
+
+    }).mount("#app")
+  </script>
 
 </body>
 </html>
